--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,142 +1,138 @@
 enable_testing()
 
-set(TEST_BINARY_DIR ${CMAKE_BINARY_DIR}/bin)
+set(TEST_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/bin)
 file(MAKE_DIRECTORY ${TEST_BINARY_DIR})
-set(TEST_OBJ_DIR ${CMAKE_BINARY_DIR}/objs)
+set(TEST_OBJ_DIR ${CMAKE_CURRENT_BINARY_DIR}/obj)
 file(MAKE_DIRECTORY ${TEST_OBJ_DIR})
 
-add_test(NAME check_EXECUTABLE COMMAND ${EXECUTABLE} -help)
+add_test(NAME check_executable COMMAND ${EXECUTABLE} -help)
 
-add_test(NAME COMPILE--testmain
-         COMMAND ${EXECUTABLE} ${CMAKE_SOURCE_DIR}/tests/usual/testmain.c -O0
-                 -g -std=gnu17 -c -o ${TEST_OBJ_DIR}/testmain.o)
+add_test(NAME compile-testmain
+         COMMAND ${EXECUTABLE} ${KCC_SOURCE_DIR}/test/usual/testmain.c -O0 -g
+                 -c -o ${TEST_OBJ_DIR}/testmain.o)
 
-add_test(NAME COMPILE--testmain--OPT
-         COMMAND ${EXECUTABLE} ${CMAKE_SOURCE_DIR}/tests/usual/testmain.c -O3
-                 -g -std=gnu17 -c -o ${TEST_OBJ_DIR}/testmain_opt.o)
+add_test(NAME compile-testmain-opt
+         COMMAND ${EXECUTABLE} ${KCC_SOURCE_DIR}/test/usual/testmain.c -O3 -g
+                 -c -o ${TEST_OBJ_DIR}/testmain_opt.o)
 
-aux_source_directory(${CMAKE_SOURCE_DIR}/tests/usual USUAL_FILES)
+aux_source_directory(${KCC_SOURCE_DIR}/test/usual USUAL_FILES)
 
 foreach(USUAL_FILE ${USUAL_FILES})
   get_filename_component(USUAL_FILE_NAME ${USUAL_FILE} NAME_WE)
-  if(USUAL_FILE_NAME MATCHES "testmain")
+  if(USUAL_FILE_NAME STREQUAL "testmain")
     continue()
   endif()
 
-  add_test(NAME COMPILE--${USUAL_FILE_NAME}
+  add_test(NAME compile-${USUAL_FILE_NAME}
            COMMAND ${EXECUTABLE} ${USUAL_FILE} ${TEST_OBJ_DIR}/testmain.o -O0
-                   -g -std=gnu17 -o ${TEST_BINARY_DIR}/${USUAL_FILE_NAME})
-  add_test(NAME RUN--${USUAL_FILE_NAME}
+                   -g -o ${TEST_BINARY_DIR}/${USUAL_FILE_NAME})
+  add_test(NAME run-${USUAL_FILE_NAME}
            COMMAND ${TEST_BINARY_DIR}/${USUAL_FILE_NAME})
-  set_tests_properties(COMPILE--${USUAL_FILE_NAME} PROPERTIES DEPENDS
-                                                              COMPILE--testmain)
-  set_tests_properties(RUN--${USUAL_FILE_NAME}
-                       PROPERTIES DEPENDS COMPILE--${USUAL_FILE_NAME})
+  set_tests_properties(compile-${USUAL_FILE_NAME} PROPERTIES DEPENDS
+                                                             compile-testmain)
+  set_tests_properties(run-${USUAL_FILE_NAME}
+                       PROPERTIES DEPENDS compile-${USUAL_FILE_NAME})
 
-  add_test(NAME COMPILE--${USUAL_FILE_NAME}--OPT
+  add_test(NAME compile-${USUAL_FILE_NAME}-opt
            COMMAND ${EXECUTABLE} ${USUAL_FILE} ${TEST_OBJ_DIR}/testmain_opt.o
-                   -O3 -std=gnu17 -o ${TEST_BINARY_DIR}/${USUAL_FILE_NAME}_opt)
-  add_test(NAME RUN--${USUAL_FILE_NAME}--OPT
+                   -O3 -o ${TEST_BINARY_DIR}/${USUAL_FILE_NAME}_opt)
+  add_test(NAME run-${USUAL_FILE_NAME}-opt
            COMMAND ${TEST_BINARY_DIR}/${USUAL_FILE_NAME}_opt)
-  set_tests_properties(COMPILE--${USUAL_FILE_NAME}--OPT
-                       PROPERTIES DEPENDS COMPILE--testmain--OPT)
-  set_tests_properties(RUN--${USUAL_FILE_NAME}--OPT
-                       PROPERTIES DEPENDS COMPILE--${USUAL_FILE_NAME}--OPT)
+  set_tests_properties(compile-${USUAL_FILE_NAME}-opt
+                       PROPERTIES DEPENDS compile-testmain-opt)
+  set_tests_properties(run-${USUAL_FILE_NAME}-opt
+                       PROPERTIES DEPENDS compile-${USUAL_FILE_NAME}-opt)
 
 endforeach()
 
 add_test(
-  NAME "COMPILE--8CC"
-  COMMAND
-    ${EXECUTABLE} ${CMAKE_SOURCE_DIR}/tests/8cc/*.c -O0 -g -std=gnu17
-    -DBUILD_DIR=\"${CMAKE_SOURCE_DIR}/tests/8cc\" -o ${TEST_BINARY_DIR}/8cc)
+  NAME "compile-8CC"
+  COMMAND ${EXECUTABLE} ${KCC_SOURCE_DIR}/test/8cc/*.c -O0 -g -std=gnu17
+          -DBUILD_DIR=\"${KCC_SOURCE_DIR}/test/8cc\" -o ${TEST_BINARY_DIR}/8cc)
 add_test(NAME check_8cc_executable COMMAND ${TEST_BINARY_DIR}/8cc -h)
 
 add_test(
-  NAME "COMPILE--8CC--OPT"
+  NAME "compile-8CC-opt"
   COMMAND
-    ${EXECUTABLE} ${CMAKE_SOURCE_DIR}/tests/8cc/*.c -O3 -std=gnu17
-    -DBUILD_DIR=\"${CMAKE_SOURCE_DIR}/tests/8cc\" -o ${TEST_BINARY_DIR}/8cc_opt)
+    ${EXECUTABLE} ${KCC_SOURCE_DIR}/test/8cc/*.c -O3 -std=gnu17
+    -DBUILD_DIR=\"${KCC_SOURCE_DIR}/test/8cc\" -o ${TEST_BINARY_DIR}/8cc_opt)
 add_test(NAME check_8cc_opt_executable COMMAND ${TEST_BINARY_DIR}/8cc_opt -h)
 
 set(TEST_OBJ_DIR ${CMAKE_BINARY_DIR}/objs)
 file(MAKE_DIRECTORY ${TEST_OBJ_DIR})
-aux_source_directory(${CMAKE_SOURCE_DIR}/tests/8cc 8CC_FILES)
+aux_source_directory(${KCC_SOURCE_DIR}/test/8cc 8CC_FILES)
 
 foreach(8CC_FILE ${8CC_FILES})
   get_filename_component(8CC_FILE_NAME ${8CC_FILE} NAME_WE)
 
   add_test(
-    NAME "COMPILE--${8CC_FILE_NAME}_8cc"
+    NAME "compile-${8CC_FILE_NAME}_8cc"
     COMMAND
       ${TEST_BINARY_DIR}/8cc ${8CC_FILE}
-      -DBUILD_DIR=\"${CMAKE_SOURCE_DIR}/tests/8cc\" -c -o
+      -DBUILD_DIR=\"${KCC_SOURCE_DIR}/test/8cc\" -c -o
       ${TEST_OBJ_DIR}/${8CC_FILE_NAME}.o)
 
   add_test(
-    NAME "COMPILE--${8CC_FILE_NAME}_8cc_opt"
+    NAME "compile-${8CC_FILE_NAME}_8cc_opt"
     COMMAND
       ${TEST_BINARY_DIR}/8cc_opt ${8CC_FILE}
-      -DBUILD_DIR=\"${CMAKE_SOURCE_DIR}/tests/8cc\" -c -o
+      -DBUILD_DIR=\"${KCC_SOURCE_DIR}/test/8cc\" -c -o
       ${TEST_OBJ_DIR}/${8CC_FILE_NAME}.o)
 endforeach()
 
 add_test(
-  NAME "COMPILE--LUA"
+  NAME "compile-LUA"
   COMMAND
-    ${EXECUTABLE} ${CMAKE_SOURCE_DIR}/tests/lua/*.c -O0 -g -std=gnu17
+    ${EXECUTABLE} ${KCC_SOURCE_DIR}/test/lua/*.c -O0 -g -std=gnu17
     -DLUA_USER_H=\"ltests.h\" -DLUA_USE_LINUX -DLUA_COMPAT_5_2 -ldl -lreadline
     -lm -o ${TEST_BINARY_DIR}/lua)
 add_test(NAME check_lua_executable COMMAND ${TEST_BINARY_DIR}/lua -v)
 
 add_test(
-  NAME "COMPILE--LUA--OPT"
+  NAME "compile-LUA-opt"
   COMMAND
-    ${EXECUTABLE} ${CMAKE_SOURCE_DIR}/tests/lua/*.c -O3 -std=gnu17
+    ${EXECUTABLE} ${KCC_SOURCE_DIR}/test/lua/*.c -O3 -std=gnu17
     -DLUA_USER_H=\"ltests.h\" -DLUA_USE_LINUX -DLUA_COMPAT_5_2 -ldl -lreadline
     -lm -o ${TEST_BINARY_DIR}/lua_opt)
 add_test(NAME check_lua_opt_executable COMMAND ${TEST_BINARY_DIR}/lua_opt -v)
 
 add_test(
   NAME lua_test
-  COMMAND ${TEST_BINARY_DIR}/lua ${CMAKE_SOURCE_DIR}/tests/lua/testes/all.lua
-  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/lua/testes)
+  COMMAND ${TEST_BINARY_DIR}/lua ${KCC_SOURCE_DIR}/test/lua/testes/all.lua
+  WORKING_DIRECTORY ${KCC_SOURCE_DIR}/test/lua/testes)
 
 add_test(
   NAME lua_test_opt
-  COMMAND ${TEST_BINARY_DIR}/lua_opt
-          ${CMAKE_SOURCE_DIR}/tests/lua/testes/all.lua
-  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests/lua/testes)
+  COMMAND ${TEST_BINARY_DIR}/lua_opt ${KCC_SOURCE_DIR}/test/lua/testes/all.lua
+  WORKING_DIRECTORY ${KCC_SOURCE_DIR}/test/lua/testes)
 
 add_test(
-  NAME "COMPILE--SQLITE"
+  NAME "compile-SQLITE"
   COMMAND
-    ${EXECUTABLE} ${CMAKE_SOURCE_DIR}/tests/sqlite/shell.c
-    ${CMAKE_SOURCE_DIR}/tests/sqlite/sqlite3.c -o ${TEST_BINARY_DIR}/sqlite -O0
-    -g -std=gnu17 -lpthread -ldl -lm -DSQLITE_DEFAULT_MEMSTATUS=0
-    -DSQLITE_DQS=0 -DSQLITE_ENABLE_DBSTAT_VTAB -DSQLITE_ENABLE_FTS5
-    -DSQLITE_ENABLE_GEOPOLY -DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_RBU
-    -DSQLITE_ENABLE_RTREE -DSQLITE_LIKE_DOESNT_MATCH_BLOBS
-    -DSQLITE_MAX_EXPR_DEPTH=0 -DSQLITE_OMIT_DECLTYPE -DSQLITE_OMIT_DEPRECATED
-    -DSQLITE_USE_ALLOCA -DSQLITE_ENABLE_MEMSYS5)
+    ${EXECUTABLE} ${KCC_SOURCE_DIR}/test/sqlite/shell.c
+    ${KCC_SOURCE_DIR}/test/sqlite/sqlite3.c -o ${TEST_BINARY_DIR}/sqlite -O0 -g
+    -lpthread -ldl -lm -DSQLITE_DEFAULT_MEMSTATUS=0 -DSQLITE_DQS=0
+    -DSQLITE_ENABLE_DBSTAT_VTAB -DSQLITE_ENABLE_FTS5 -DSQLITE_ENABLE_GEOPOLY
+    -DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_RBU -DSQLITE_ENABLE_RTREE
+    -DSQLITE_LIKE_DOESNT_MATCH_BLOBS -DSQLITE_MAX_EXPR_DEPTH=0
+    -DSQLITE_OMIT_DECLTYPE -DSQLITE_OMIT_DEPRECATED -DSQLITE_USE_ALLOCA
+    -DSQLITE_ENABLE_MEMSYS5)
 add_test(NAME check_sqlite_executable COMMAND ${TEST_BINARY_DIR}/sqlite
                                               -version)
 
 add_test(
-  NAME "COMPILE--SQLITE--OPT"
+  NAME "compile-SQLITE-opt"
   COMMAND
-    ${EXECUTABLE} ${CMAKE_SOURCE_DIR}/tests/sqlite/shell.c
-    ${CMAKE_SOURCE_DIR}/tests/sqlite/sqlite3.c -o ${TEST_BINARY_DIR}/sqlite_opt
-    -O3 -std=gnu17 -lpthread -ldl -lm -DNDEBUG -DSQLITE_DEFAULT_MEMSTATUS=0
-    -DSQLITE_DQS=0 -DSQLITE_ENABLE_DBSTAT_VTAB -DSQLITE_ENABLE_FTS5
-    -DSQLITE_ENABLE_GEOPOLY -DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_RBU
-    -DSQLITE_ENABLE_RTREE -DSQLITE_LIKE_DOESNT_MATCH_BLOBS
-    -DSQLITE_MAX_EXPR_DEPTH=0 -DSQLITE_OMIT_DECLTYPE -DSQLITE_OMIT_DEPRECATED
-    -DSQLITE_USE_ALLOCA -DSQLITE_ENABLE_MEMSYS5)
+    ${EXECUTABLE} ${KCC_SOURCE_DIR}/test/sqlite/shell.c
+    ${KCC_SOURCE_DIR}/test/sqlite/sqlite3.c -o ${TEST_BINARY_DIR}/sqlite_opt
+    -O3 -lpthread -ldl -lm -DNDEBUG -DSQLITE_DEFAULT_MEMSTATUS=0 -DSQLITE_DQS=0
+    -DSQLITE_ENABLE_DBSTAT_VTAB -DSQLITE_ENABLE_FTS5 -DSQLITE_ENABLE_GEOPOLY
+    -DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_RBU -DSQLITE_ENABLE_RTREE
+    -DSQLITE_LIKE_DOESNT_MATCH_BLOBS -DSQLITE_MAX_EXPR_DEPTH=0
+    -DSQLITE_OMIT_DECLTYPE -DSQLITE_OMIT_DEPRECATED -DSQLITE_USE_ALLOCA
+    -DSQLITE_ENABLE_MEMSYS5)
 add_test(NAME check_sqlite_opt_executable COMMAND ${TEST_BINARY_DIR}/sqlite_opt
                                                   -version)
-
-add_custom_target(test_all COMMAND ctest -j1 --output-on-failure)
 
 include(Coverage)
 include(Valgrind)
